--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿blinker==1.7.0
+blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
@@ -13,3 +13,4 @@ Werkzeug==3.0.1
 jsonify==0.5
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+numpy==1.21.5
