--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==24.0
-python-dotenv==1.0.1
+python-dotenv
 Werkzeug==3.0.1
 jsonify==0.5
 jsonschema==4.21.1
