--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-blinker
-click
-colorama
-Flask
-Flask-Cors
-gunicorn
-itsdangerous
-Jinja2
-MarkupSafe
-packaging
-python-dotenv
-Werkzeug
-jsonify
-jsonschema
-jsonschema-specifications
+blinker==1.7.0
+click==8.1.7
+colorama==0.4.6
+Flask==3.0.2
+Flask-Cors==4.0.0
+gunicorn==21.2.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+packaging==24.0
+python-dotenv==1.0.1
+Werkzeug==3.0.1
+jsonify==0.5
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 numpy
-urllib.parse
